--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=link-friend
+spring.data.mongodb.uri=mongodb://linkfriend:linkfriend123!@144.24.66.94:27017/linkfriend
+
+# JWT 설정
+jwt.secret=ThisIsASecretKeyThatShouldBeLongEnough1234567890
+jwt.expiration=3600000
